<resources>
    <string name="hdc_app_name">HDCalculator</string>

    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_warn_detect_paper">Please take the receipt.\n</string>
    <string name="handlingmsg_warn_detect_unknown">Please check if not ambient light reaches paper outlet and if paper taken sensor status in the printer is enable if you need to use paper taken sensor status.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <string name="handlingmsg_err_wait_removal">Please remove paper.\n</string>
    <string name="handlingmsg_err_voltage">Please check the voltage status.\n</string>

    <string name="hdc_ac">AC</string>
    <string name="hdc_left_bracket">(</string>
    <string name="hdc_right_bracket">)</string>
    <string name="hdc_left">%</string>
    <string name="hdc_divide">÷</string>
    <string name="hdc_seven">7</string>
    <string name="hdc_eight">8</string>
    <string name="hdc_night">9</string>
    <string name="hdc_multiply">×</string>
    <string name="hdc_four">4</string>
    <string name="hdc_five">5</string>
    <string name="hdc_six">6</string>
    <string name="hdc_sub">-</string>
    <string name="hdc_one">1</string>
    <string name="hdc_two">2</string>
    <string name="hdc_three">3</string>
    <string name="hdc_plus">+</string>
    <string name="hdc_zero">0</string>
    <string name="hdc_dot">.</string>
    <string name="hdc_equal">=</string>
    <string name="hdc_del">DEL</string>
    <string name="hdc_star">*</string>

    <string name="hdc_lokal_1">Lokal1</string>
    <string name="hdc_lokal_2">Lokal2</string>
    <string name="hdc_unit">€</string>
    <string name="hdc_time_water_format">%1$s  (%2$d)</string>
    <string name="hdc_takeout">AUSSERHAUS</string>
    <string name="hdc_dining">HIER ESSEN</string>
    <string name="hdc_menu_cloud_sync">Lokaler Modus</string>
    <string name="hdc_menu_order_manage">Belege</string>
    <string name="hdc_menu_cancel_record">Stornierungen</string>
    <string name="hdc_menu_un_print">Server-Synchron</string>
    <string name="hdc_menu_menu_manage">Tisch Management</string>
    <string name="hdc_menu_report">Berichte</string>
    <string name="hdc_menu_setting">Einstellungen</string>
    <string name="hdc_menu_service">Systeminformationen</string>
    <string name="hdc_menu_logout">Ausloggen</string>
    <string name="hdc_current_table">Aktuell：Tisch 5</string>
    <string name="hdc_trans_table_tips">Bitte waehlen Sie eine Option.</string>
    <string name="hdc_transform">Umbuchung</string>
    <string name="hdc_delete">Stornung</string>
    <string name="hdc_delete_table_order_tips">Stornieren Sie alle Artikeln ?</string>
    <string name="hdc_cancel">Abrechen</string>
    <string name="hdc_ok">OK</string>
    <string name="hdc_abc">ABC</string>
    <string name="hdc_transform_table_tips">Bitte Zieltisch eingeben</string>
    <string name="hdc_new_order_tips_not_input">Tischnummer eingeben</string>
    <string name="hdc_new_order_tips_inputted">Tischnummer</string>
    <string name="hdc_new_order">Tischauswahl</string>
    <string name="hdc_title_input_dishes">Bestellung</string>
    <string name="hdc_remark">MEMO</string>
    <string name="hdc_back">ZURUECK</string>
    <string name="hdc_make_order">SENDEN</string>
    <string name="hdc_ordering">BESTELLEN</string>
    <string name="hdc_choose_dishes_tips">Anzahl * Artikelnummer</string>
    <string name="hdc_add">HINZUF</string>
    <string name="hdc_input_custom_remark">Benuterdef</string>
    <string name="hdc_remark_cancel">ABBRECHEN</string>
    <string name="hdc_remark_continue">FORTSETZEN</string>
    <string name="hdc_payment">Bezahlen</string>
    <string name="hdc_pay_cost">Summe</string>
    <string name="hdc_modify_count">Anzahl aendern</string>
    <string name="hdc_pin">PIN</string>
    <string name="hdc_all">ALLE</string>
    <string name="hdc_split_pay">Rechnung splitten</string>
    <string name="hdc_preview_order">VORSCHAU</string>
    <string name="hdc_par_card">KARTE</string>
    <string name="hdc_pay_cash">BAR</string>
    <string name="hdc_keyboard_split">,</string>
    <string name="hdc_keyboard_c">C</string>
    <string name="hdc_cont_desc">Summe inkl, Trinkgeld</string>
    <string name="hdc_payment_cash">Barzahlung</string>
    <string name="hdc_payment_card">Kartenzahlung</string>
    <string name="hdc_table_split_pay">TISCH GETEILT</string>
    <string name="hdc_title_order_management">Rechnungen</string>
    <string name="hdc_today">Heute</string>
    <string name="hdc_empty_cancel_record">Keine Stornierungen</string>
    <string name="hdc_already_cancel_dishes">Stornierte Artikel</string>
    <string name="hdc_add_table">Neuer Tisch</string>
    <string name="hdc_table_manage">Tisch verwalten</string>
    <string name="hdc_new_table">Neuer Tisch</string>
    <string name="hdc_zoom">Zone</string>
    <string name="hdc_hdc_table_number">Tisch Nr.</string>
    <string name="hdc_hdc_delete_table_title">Loeschen</string>
    <string name="hdc_delete_table_tips">Moechten Sie diese Tisch Nr\nloeschen?</string>
    <string name="hdc_delete_table_tips_used">Diese Tisch Nr. kann nicht\ngeloescht werden. Es gibt\nnoch offene Bestellungen auf\ndiesem Tisch.</string>
    <string name="hdc_un_order_title">Es gibt noch offene Bestellung!</string>
    <string name="hdc_un_order_tips">Was soll mit offener Bestellung passieren?</string>
    <string name="hdc_un_order_item_print">offene Bestellung ausdrucken</string>
    <string name="hdc_un_order_item_un_print">offene Bestellung nur senden, nicht ausdrucken</string>
    <string name="hdc_un_order_item_delete">offene Bestellung verwerfen</string>
    <string name="hdc_un_order_cancel">ABBRECHEN</string>
    <string name="hdc_search_order">Suchen nach Tisch Nr.</string>
    <string name="hdc_input_table_num">Tisch Nr.</string>
    <string name="hdc_option">Optionen</string>
    <string name="hdc_restore_table">TISCH Wiederherstellen</string>
    <string name="hdc_modify_pay_type">Zahlungsart aendern</string>
    <string name="hdc_restore_table_tips">Zieltisch zur Tischwiederherstellung ist belegt.Bitte geben Sie einen nicht belegten Tisch ein.</string>
    <string name="hdc_choose_other_table">bitte angeben</string>
    <string name="hdc_current_type_label">Aktuelle Zahlungsart：</string>
    <string name="hdc_modify_pay_type_cash">BAR</string>
    <string name="hdc_modify_pay_type_tips">Durch waehlen koennen Sie Zahlungsart aendern</string>
    <string name="hdc_modify_pay_type_card">KARTE</string>
    <string name="hdc_daily_report">Tagesbericht</string>
    <string name="hdc_hdc_report_label_total_income">Summe von allen Rechnungen</string>
    <string name="hdc_report_label_total_card_order_count">Anzahl der Kartenzahlungen</string>
    <string name="hdc_report_label_total_card_order_amount">Summe der Kartenzahlungen</string>
    <string name="hdc_report_label_total_card_order_tips">Gesamtbetrag des Karten-Trinkgelds</string>
    <string name="hdc_report_label_total_cash_order_count">Anzahl der Barzahlungen</string>
    <string name="hdc_report_label_total_cash_order_amount">Summe der Barzahlungen</string>
    <string name="hdc_report_label_need_cash_amount">Abzugebender Bargeldbetrag(=Summe der Barzahlung–Karten-Trinkgeld)</string>
    <string name="hdc_old_pin">aktuelles PlN</string>
    <string name="hdc_old_pin_hint">aktuelles PlN eingeben</string>
    <string name="hdc_new_pin_hint">neues PlN eingeben</string>
    <string name="hdc_new_pin">neues PlN</string>
    <string name="hdc_new_pin_confirm">neues PlN bestaetigen</string>
    <string name="hdc_new_pin_confirm_hint">neues PlN wieder eingeben zu bestaetigen</string>
    <string name="hdc_modify_pin_title">Bestellung</string>
    <string name="hdc_choose_table">Tischauswahl</string>
    <string name="hdc_choose_table_from_create_empty_tips">Tischnummer eingeben</string>
    <string name="hdc_choose_table_from_create_inputed">Tischnummer</string>
    <string name="hdc_tips">Hinweis</string>
    <string name="hdc_cancel_bill">Rechnung stornieren</string>
    <string name="hdc_ticker_line">-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="hdc_menu_ble_mac">MAC</string>
    <string name="hdc_printer_ble_mac">Printer Ble Mac</string>
    <string name="hdc_table_order_conflict_tips_boss">选择本地或服务器？</string>
    <string name="hdc_local">本地</string>
    <string name="hdc_select_cloud">服务器</string>
    <string name="hdc_table_order_conflict_tips_waiter">请选择方案\n1.通知其他跑堂转移桌\n2.转移当前桌</string>
    <string name="hdc_already_notify">已通知</string>
    <string name="hdc_waiter_transform_conflict">转移</string>
    <string name="hdc_table_already_hold">桌子已被占用</string>
    <string name="hdc_login">EINLOGGEN</string>

</resources>