<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyBoardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeven"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_seven" />

        <TextView
            android:id="@+id/tvEight"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_eight" />

        <TextView
            android:id="@+id/tvNight"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_night" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFour"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_four" />

        <TextView
            android:id="@+id/tvFive"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_five" />

        <TextView
            android:id="@+id/tvSix"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_six" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOne"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_one" />

        <TextView
            android:id="@+id/tvTwo"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_two" />

        <TextView
            android:id="@+id/tvThree"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_three" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAbc"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_abc" />

        <TextView
            android:id="@+id/tvZero"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_zero" />

        <FrameLayout
            android:id="@+id/ivDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/hdc_shape_gray_frame">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/hdc_ic_keyboard_delete" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>