<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hdc_actionBarColor">


    <include layout="@layout/hdc_include_top_bar"
        android:id="@+id/includeTopBar"/>

    <TextView
        android:id="@+id/tvBossPwd"
        android:layout_width="144dp"
        android:layout_height="54dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/hdc_shape_gray_frame_r6"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <TextView
        android:id="@+id/tvPin"
        android:layout_width="144dp"
        android:layout_height="54dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/shape_white_r6"
        android:gravity="center"
        android:text="@string/hdc_pin"
        android:textColor="@color/color_282929"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/keyBoardContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBossPwd" />

    <LinearLayout
        android:id="@+id/keyBoardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeven"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_seven" />

            <TextView
                android:id="@+id/tvEight"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_eight" />

            <TextView
                android:id="@+id/tvNight"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_night" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFour"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_four" />

            <TextView
                android:id="@+id/tvFive"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_five" />

            <TextView
                android:id="@+id/tvSix"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_six" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_one" />

            <TextView
                android:id="@+id/tvTwo"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_two" />

            <TextView
                android:id="@+id/tvThree"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_three" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/ivDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/hdc_shape_gray_frame_w0_5">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/hdc_ic_keyboard_delete" />
            </FrameLayout>


            <TextView
                android:id="@+id/tvZero"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_zero" />

            <TextView
                android:id="@+id/tvOk"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_ok"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/hdc_shape_green"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>