<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/includeTopBar"
        layout="@layout/hdc_include_top_bar" />

    <TextView
        android:id="@+id/tvCurrentTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Aktuell：Tisch 5"
        android:textColor="@color/color_282929"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeTopBar" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hdc_transform_table_tips"
        android:textColor="@color/color_969799"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentTable" />

    <TextView
        android:id="@+id/tvSelectTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="@color/color_282929"
        android:textSize="64dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/keyBoardContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTips" />

    <LinearLayout
        android:id="@+id/keyBoardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnOk">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeven"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_seven" />

            <TextView
                android:id="@+id/tvEight"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_eight" />

            <TextView
                android:id="@+id/tvNight"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_night" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFour"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_four" />

            <TextView
                android:id="@+id/tvFive"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_five" />

            <TextView
                android:id="@+id/tvSix"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_six" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOne"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_one" />

            <TextView
                android:id="@+id/tvTwo"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_two" />

            <TextView
                android:id="@+id/tvThree"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_three" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAbc"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_abc" />

            <TextView
                android:id="@+id/tvZero"
                style="@style/hdc_transform_keyboard_text_style"
                android:text="@string/hdc_zero" />

            <FrameLayout
                android:id="@+id/ivDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/hdc_shape_gray_frame_w0_5">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:src="@drawable/hdc_ic_keyboard_delete" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/hdc_shape_green_r45"
        android:gravity="center"
        android:text="@string/hdc_ok"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>