<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/includeTopBar"
        layout="@layout/hdc_include_top_bar" />

    <ImageView
        android:id="@+id/ivPayDel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/hdc_ic_pay_del"
        app:layout_constraintBottom_toTopOf="@+id/keyBoardContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeTopBar" />

    <ImageView
        android:id="@+id/ivPayAdd"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/hdc_ic_pay_add"
        app:layout_constraintBottom_toTopOf="@+id/keyBoardContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeTopBar" />

    <TextView
        android:id="@+id/tvCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="17,90"
        android:textColor="@color/color_282929"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivPayAdd"
        app:layout_constraintEnd_toStartOf="@+id/ivPayAdd"
        app:layout_constraintStart_toEndOf="@+id/ivPayDel"
        app:layout_constraintTop_toTopOf="@+id/ivPayAdd" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/hdc_cont_desc"
        android:textColor="@color/color_969799"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Trinkgeld：0,00 €"
        android:textColor="@color/color_485ABE"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCost" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keyBoardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvZero"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvThree"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSplit"
            style="@style/hdc_transform_keyboard_text_style"
            android:background="@drawable/hdc_shape_keyboard_remark_enable_bg"
            android:text="@string/hdc_keyboard_split"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvC"
            app:layout_constraintStart_toEndOf="@+id/tvZero" />

        <!-- ok -->
        <TextView
            android:id="@+id/tvOk"
            style="@style/hdc_transform_keyboard_text_style"
            android:layout_height="0dp"
            android:background="@drawable/hdc_shape_keyboard_make_order_bg"
            android:text="@string/hdc_ok"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSplit"
            app:layout_constraintTop_toBottomOf="@+id/tvC" />

        <TextView
            android:id="@+id/tvOne"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_one"
            app:layout_constraintBottom_toTopOf="@+id/tvZero"
            app:layout_constraintEnd_toStartOf="@+id/tvFive"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTwo"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_two"
            app:layout_constraintBottom_toTopOf="@+id/tvZero"
            app:layout_constraintEnd_toStartOf="@+id/tvSix"
            app:layout_constraintStart_toEndOf="@+id/tvOne" />

        <TextView
            android:id="@+id/tvThree"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_three"
            app:layout_constraintBottom_toTopOf="@+id/tvZero"
            app:layout_constraintEnd_toStartOf="@+id/tvC"
            app:layout_constraintStart_toEndOf="@+id/tvTwo" />

        <TextView
            android:id="@+id/tvFour"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_four"
            app:layout_constraintBottom_toTopOf="@+id/tvOne"
            app:layout_constraintEnd_toStartOf="@+id/tvFive"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvFive"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_five"
            app:layout_constraintBottom_toTopOf="@+id/tvOne"
            app:layout_constraintEnd_toStartOf="@+id/tvSix"
            app:layout_constraintStart_toEndOf="@+id/tvFour" />

        <TextView
            android:id="@+id/tvSix"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_six"
            app:layout_constraintBottom_toTopOf="@+id/tvOne"
            app:layout_constraintEnd_toStartOf="@+id/tvC"
            app:layout_constraintStart_toEndOf="@+id/tvFive" />

        <TextView
            android:id="@+id/tvC"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_keyboard_c"
            app:layout_constraintBottom_toTopOf="@+id/tvOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSix" />


        <TextView
            android:id="@+id/tvSeven"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_seven"
            app:layout_constraintBottom_toTopOf="@+id/tvFour"
            app:layout_constraintEnd_toStartOf="@+id/tvFive"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEight"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_eight"
            app:layout_constraintBottom_toTopOf="@+id/tvFour"
            app:layout_constraintEnd_toStartOf="@+id/tvSix"
            app:layout_constraintStart_toEndOf="@+id/tvFour" />

        <TextView
            android:id="@+id/tvNight"
            style="@style/hdc_transform_keyboard_text_style"
            android:text="@string/hdc_night"
            app:layout_constraintBottom_toTopOf="@+id/tvFour"
            app:layout_constraintEnd_toStartOf="@+id/tvC"
            app:layout_constraintStart_toEndOf="@+id/tvFive" />

        <ImageView
            android:id="@+id/ivDel"
            style="@style/hdc_transform_keyboard_text_style"
            android:scaleType="centerInside"
            android:src="@drawable/hdc_ic_keyboard_delete"
            android:text="@string/hdc_keyboard_c"
            app:layout_constraintBottom_toTopOf="@+id/tvFour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSix" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>